# fort-rs

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md
core/: Cargo.toml
core/src/: lib.rs
fort-rs-wasm/: Cargo.toml  index.html  index.js
fort-rs-wasm/src/: lib.rs
src/: lib.rs  main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
