[package]
name = "fort-rs"
version = "0.1.0"
authors = ["Gerald Wu <gerald@geraldwu.com>"]
license = "AGPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypt = "0.8"
hmac = {version = "0.11", features = ["std"]}
sha2 = "0.9" 
sha3 = "0.9"
anyhow = "1"
clap = { version = "3", features = ["derive"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"

[workspace]
members = ["fort-rs-wasm"]

[profile.release.package.fort-rs-wasm]
opt-level = "s"
