[package]
name = "fort-rs"
version = "0.1.0"
authors = ["Gerald Wu <gerald@geraldwu.com>"]
license = "AGPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "bin/src/main.rs"
name = "fort-rs"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"]}
fort-rs-core = { path = "./core" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"

[workspace]
members = ["core", "bin", "wasm"]

[profile.release.package.fort-rs-wasm]
opt-level = "s"
